k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-k8s.yml
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mysqlserver
  name: mysqlserver
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysqlserver
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-k8s.yml
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/spring-petclinic-docker-default: "true"
        io.kompose.service: mysqlserver
    spec:
      containers:
        - env:
            - name: MYSQL_ALLOW_EMPTY_PASSWORD
              value: "true"
            - name: MYSQL_DATABASE
              value: petclinic
            - name: MYSQL_PASSWORD
              value: petclinic
            - name: MYSQL_ROOT_PASSWORD
            - name: MYSQL_USER
              value: petclinic
          image: mysql:8
          name: mysqlserver
          ports:
            - containerPort: 3306
              hostPort: 3306
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
            - mountPath: /etc/mysql/conf.d
              name: mysql-config
      restartPolicy: Always
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data
        - name: mysql-config
          persistentVolumeClaim:
            claimName: mysql-config
status: {}
