k8s/petclinic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-k8s.yml
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: petclinic
  name: petclinic
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: petclinic
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-k8s.yml
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/spring-petclinic-docker-default: "true"
        io.kompose.service: petclinic
    spec:
      containers:
        - env:
            - name: MYSQL_URL
              value: jdbc:mysql://mysqlserver/petclinic
            - name: SERVER_PORT
              value: "8080"
          image: 590184124193.dkr.ecr.ap-northeast-2.amazonaws.com/spring-petclinic-docker:1.6.13
          imagePullPolicy: IfNotPresent
          name: petclinic
          ports:
            - containerPort: 8000
              hostPort: 8000
              protocol: TCP
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
