k8s/petclinic-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  annotations:
    kompose.cmd: kompose convert -f docker-compose-k8s.yml
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: petclinic
  name: petclinic
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: petclinic
status:
  loadBalancer: {}
